// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<div
  class="wp-components-view wp-components-spacer css-cps59k"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render margin 1`] = `
<div
  class="wp-components-view wp-components-spacer css-1rs6mqm"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render marginBottom 1`] = `
<div
  class="wp-components-view wp-components-spacer css-72p0t4"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render marginLeft 1`] = `
<div
  class="wp-components-view wp-components-spacer css-11cfzps"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render marginRight 1`] = `
<div
  class="wp-components-view wp-components-spacer css-1lkgwpu"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render marginTop 1`] = `
<div
  class="wp-components-view wp-components-spacer css-fuxbps"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render marginX 1`] = `
<div
  class="wp-components-view wp-components-spacer css-1ptz4vd"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render marginY 1`] = `
<div
  class="wp-components-view wp-components-spacer css-bgn9w6"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render padding 1`] = `
<div
  class="wp-components-view wp-components-spacer css-1a9w7h5"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render paddingBottom 1`] = `
<div
  class="wp-components-view wp-components-spacer css-17jya3c"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render paddingLeft 1`] = `
<div
  class="wp-components-view wp-components-spacer css-du6ztx"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render paddingRight 1`] = `
<div
  class="wp-components-view wp-components-spacer css-g1n178"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render paddingTop 1`] = `
<div
  class="wp-components-view wp-components-spacer css-5lv7lr"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render paddingX 1`] = `
<div
  class="wp-components-view wp-components-spacer css-6wi796"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render paddingY 1`] = `
<div
  class="wp-components-view wp-components-spacer css-8r4dpt"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;
